# FortTE

./: CMakeLists.txt  DataClass.cpp  DataClass.cpp.autosave  DataClass.hpp  README.txt  main.cpp
include/: Data.hpp
src/: Data.cpp
